--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,6 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+#Salesforce DX folder that holds temporary information for scratch orgs
+*.sfdx
